{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 315,
  "lineage": "0b0267dd-89fc-145e-3f14-22e501369095",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_firewall_policy",
      "name": "hvsoc_siempf_FW_policy",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "base_policy_id": "",
            "child_policies": [],
            "dns": [
              {
                "network_rule_fqdn_enabled": false,
                "proxy_enabled": true,
                "servers": null
              }
            ],
            "firewalls": [],
            "id": "/subscriptions/e3b6ef5f-4e73-4510-9f11-2e94e2e518c7/resourceGroups/duplicate_hvsoc_siempf/providers/Microsoft.Network/firewallPolicies/hvsoc_siempf_FW_policy",
            "identity": [],
            "insights": [],
            "intrusion_detection": [],
            "location": "japaneast",
            "name": "hvsoc_siempf_FW_policy",
            "private_ip_ranges": null,
            "resource_group_name": "duplicate_hvsoc_siempf",
            "rule_collection_groups": [],
            "sku": "Standard",
            "tags": null,
            "threat_intelligence_allowlist": [],
            "threat_intelligence_mode": "Alert",
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            },
            "tls_certificate": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.hvsoc_siempf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "hvsoc0101-siempfnfs-484",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e3b6ef5f-4e73-4510-9f11-2e94e2e518c7/resourceGroups/duplicate_hvsoc_siempf/providers/Microsoft.Network/networkInterfaces/hvsoc0101-siempfnfs-484",
            "internal_domain_name_suffix": "df3bocswudte5bpwxetyh02k5e.lx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "172.18.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e3b6ef5f-4e73-4510-9f11-2e94e2e518c7/resourceGroups/duplicate_hvsoc_siempf/providers/Microsoft.Network/virtualNetworks/hvsoc0101-siempfnfs-vnet/subnets/subnet-indexer"
              }
            ],
            "location": "japaneast",
            "name": "hvsoc0101-siempfnfs-484",
            "private_ip_address": "172.18.0.4",
            "private_ip_addresses": [
              "172.18.0.4"
            ],
            "resource_group_name": "duplicate_hvsoc_siempf",
            "timeouts": {
            }
          },
          "dependencies": [
            "azurerm_resource_group.hvsoc_siempf",
            "azurerm_subnet.hvsoc_siempf_subnet-indexer_Subnet",
            "azurerm_virtual_network.hvsoc0101-siempfnfs-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "hvsoc0101-siempfnfs-691",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e3b6ef5f-4e73-4510-9f11-2e94e2e518c7/resourceGroups/duplicate_hvsoc_siempf/providers/Microsoft.Network/networkInterfaces/hvsoc0101-siempfnfs-691",
            "internal_domain_name_suffix": "df3bocswudte5bpwxetyh02k5e.lx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "172.18.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/e3b6ef5f-4e73-4510-9f11-2e94e2e518c7/resourceGroups/duplicate_hvsoc_siempf/providers/Microsoft.Network/publicIPAddresses/hvsoc0101-siempfnfs-vnet-public-ip3",
                "subnet_id": "/subscriptions/e3b6ef5f-4e73-4510-9f11-2e94e2e518c7/resourceGroups/duplicate_hvsoc_siempf/providers/Microsoft.Network/virtualNetworks/hvsoc0101-siempfnfs-vnet/subnets/subnet-indexer"
              }
            ],
            "location": "japaneast",
            "name": "hvsoc0101-siempfnfs-691",
            "private_ip_address": "172.18.0.5",
            "private_ip_addresses": [
              "172.18.0.5"
            ],
            "resource_group_name": "duplicate_hvsoc_siempf",
            "timeouts": {
            }
          },
          "dependencies": [
            "azurerm_public_ip.hvsoc0101-siempfnfs-vnet-public-ip3",
            "azurerm_resource_group.hvsoc_siempf",
            "azurerm_subnet.hvsoc_siempf_subnet-indexer_Subnet",
            "azurerm_virtual_network.hvsoc0101-siempfnfs-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "hvsoc0101-siempfnfs-835",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e3b6ef5f-4e73-4510-9f11-2e94e2e518c7/resourceGroups/duplicate_hvsoc_siempf/providers/Microsoft.Network/networkInterfaces/hvsoc0101-siempfnfs-835",
            "internal_domain_name_suffix": "df3bocswudte5bpwxetyh02k5e.lx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "172.19.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e3b6ef5f-4e73-4510-9f11-2e94e2e518c7/resourceGroups/duplicate_hvsoc_siempf/providers/Microsoft.Network/virtualNetworks/hvsoc0101-siempfnfs-vnet/subnets/subnet-redmine"
              }
            ],
            "location": "japaneast",
            "name": "hvsoc0101-siempfnfs-835",
            "private_ip_address": "172.19.0.4",
            "private_ip_addresses": [
              "172.19.0.4"
            ],
            "resource_group_name": "duplicate_hvsoc_siempf",
            "timeouts": {
            }
          },
          "dependencies": [
            "azurerm_resource_group.hvsoc_siempf",
            "azurerm_subnet.hvsoc_siempf_subnet-redmine_Subnet",
            "azurerm_virtual_network.hvsoc0101-siempfnfs-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "hvsoc0101-siempfnfs-vnet-bastion-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e3b6ef5f-4e73-4510-9f11-2e94e2e518c7/resourceGroups/duplicate_hvsoc_siempf/providers/Microsoft.Network/networkSecurityGroups/hvsoc0101-siempfnfs-vnet-bastion-nsg",
            "location": "japaneast",
            "name": "hvsoc0101-siempfnfs-vnet-bastion-nsg",
            "resource_group_name": "duplicate_hvsoc_siempf",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_AzureLoadBalancer_InBound",
                "priority": 1020,
                "protocol": "TCP",
                "source_address_prefix": "AzureLoadBalancer",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_GatewayManager_InBound",
                "priority": 1010,
                "protocol": "TCP",
                "source_address_prefix": "GatewayManager",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_HTTPS_InBound",
                "priority": 1000,
                "protocol": "TCP",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "AzureCloud",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Allow_AzureCloud_OutBound",
                "priority": 1010,
                "protocol": "TCP",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "Internet",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Allow_GetSessionInfomation",
                "priority": 1030,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "22",
                  "3389"
                ],
                "direction": "Outbound",
                "name": "Allow_SSH_RDP_OutBound",
                "priority": 1000,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "5701",
                  "8080"
                ],
                "direction": "Inbound",
                "name": "Allow_AzureBastionHostCommunication",
                "priority": 1030,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "5701",
                  "8080"
                ],
                "direction": "Outbound",
                "name": "Allow_AzureBastionommunication",
                "priority": 1020,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Deny_All_InBound",
                "priority": 4096,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Deny_All_OutBound",
                "priority": 4096,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.hvsoc_siempf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "hvsoc0101-siempfnfs-vnet-nsg-indexer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e3b6ef5f-4e73-4510-9f11-2e94e2e518c7/resourceGroups/duplicate_hvsoc_siempf/providers/Microsoft.Network/networkSecurityGroups/hvsoc0101-siempfnfs-vnet-nsg-indexer",
            "location": "japaneast",
            "name": "hvsoc0101-siempfnfs-vnet-nsg-indexer",
            "resource_group_name": "duplicate_hvsoc_siempf",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "9997",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Port_SplunkReceive",
                "priority": 100,
                "protocol": "TCP",
                "source_address_prefix": "20.191.190.193",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.hvsoc_siempf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "hvsoc0101-siempfnfs-vnet-nsg-redmine",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e3b6ef5f-4e73-4510-9f11-2e94e2e518c7/resourceGroups/duplicate_hvsoc_siempf/providers/Microsoft.Network/networkSecurityGroups/hvsoc0101-siempfnfs-vnet-nsg-redmine",
            "location": "japaneast",
            "name": "hvsoc0101-siempfnfs-vnet-nsg-redmine",
            "resource_group_name": "duplicate_hvsoc_siempf",
            "security_rule": [],
            "tags": null,
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.hvsoc_siempf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "hvsoc0101-siempfnfs-vnet-public-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "Zone-Redundant",
            "id": "/subscriptions/e3b6ef5f-4e73-4510-9f11-2e94e2e518c7/resourceGroups/duplicate_hvsoc_siempf/providers/Microsoft.Network/publicIPAddresses/hvsoc0101-siempfnfs-vnet-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.210.1.217",
            "ip_version": "IPv4",
            "location": "japaneast",
            "name": "hvsoc0101-siempfnfs-vnet-public-ip",
            "resource_group_name": "duplicate_hvsoc_siempf",
            "sku": "Standard",
            "sku_tier": "Regional",
            "timeouts": {
            }
          },
          "dependencies": [
            "azurerm_resource_group.hvsoc_siempf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "hvsoc0101-siempfnfs-vnet-public-ip-FW",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/e3b6ef5f-4e73-4510-9f11-2e94e2e518c7/resourceGroups/duplicate_hvsoc_siempf/providers/Microsoft.Network/publicIPAddresses/hvsoc0101-siempfnfs-vnet-public-ip-FW",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.210.223.252",
            "ip_version": "IPv4",
            "location": "japaneast",
            "name": "hvsoc0101-siempfnfs-vnet-public-ip-FW",
            "resource_group_name": "duplicate_hvsoc_siempf",
            "sku": "Standard",
            "sku_tier": "Regional",
            "timeouts": {
            }
          },
          "dependencies": [
            "azurerm_resource_group.hvsoc_siempf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "hvsoc0101-siempfnfs-vnet-public-ip3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "Zone-Redundant",
            "id": "/subscriptions/e3b6ef5f-4e73-4510-9f11-2e94e2e518c7/resourceGroups/duplicate_hvsoc_siempf/providers/Microsoft.Network/publicIPAddresses/hvsoc0101-siempfnfs-vnet-public-ip3",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.210.1.118",
            "ip_version": "IPv4",
            "location": "japaneast",
            "name": "hvsoc0101-siempfnfs-vnet-public-ip3",
            "resource_group_name": "duplicate_hvsoc_siempf",
            "sku": "Standard",
            "sku_tier": "Regional",
            "timeouts": {
            }
          },
          "dependencies": [
            "azurerm_resource_group.hvsoc_siempf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "hvsoc_siempf_AzureBastion_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.17.0.0/27",
            "address_prefixes": [
              "172.17.0.0/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e3b6ef5f-4e73-4510-9f11-2e94e2e518c7/resourceGroups/duplicate_hvsoc_siempf/providers/Microsoft.Network/virtualNetworks/hvsoc0101-siempfnfs-vnet/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "resource_group_name": "duplicate_hvsoc_siempf",
            "virtual_network_name": "hvsoc0101-siempfnfs-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.hvsoc_siempf",
            "azurerm_virtual_network.hvsoc0101-siempfnfs-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "hvsoc_siempf_AzureFirewallSubnet_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.21.0.0/24",
            "address_prefixes": [
              "172.21.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e3b6ef5f-4e73-4510-9f11-2e94e2e518c7/resourceGroups/duplicate_hvsoc_siempf/providers/Microsoft.Network/virtualNetworks/hvsoc0101-siempfnfs-vnet/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "resource_group_name": "duplicate_hvsoc_siempf",
            "virtual_network_name": "hvsoc0101-siempfnfs-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.hvsoc_siempf",
            "azurerm_virtual_network.hvsoc0101-siempfnfs-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "hvsoc_siempf_subnet-container-instances_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.20.0.0/24",
            "address_prefixes": [
              "172.20.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e3b6ef5f-4e73-4510-9f11-2e94e2e518c7/resourceGroups/duplicate_hvsoc_siempf/providers/Microsoft.Network/virtualNetworks/hvsoc0101-siempfnfs-vnet/subnets/subnet-container-instances",
            "name": "subnet-container-instances",
            "resource_group_name": "duplicate_hvsoc_siempf",
            "service_endpoints": [
              "Microsoft.KeyVault",
              "Microsoft.Storage"
            ],
            "virtual_network_name": "hvsoc0101-siempfnfs-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.hvsoc_siempf",
            "azurerm_virtual_network.hvsoc0101-siempfnfs-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "hvsoc_siempf_subnet-indexer_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.18.0.0/24",
            "address_prefixes": [
              "172.18.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e3b6ef5f-4e73-4510-9f11-2e94e2e518c7/resourceGroups/duplicate_hvsoc_siempf/providers/Microsoft.Network/virtualNetworks/hvsoc0101-siempfnfs-vnet/subnets/subnet-indexer",
            "name": "subnet-indexer",
            "resource_group_name": "duplicate_hvsoc_siempf",
            "service_endpoints": [
              "Microsoft.KeyVault"
            ],
            "virtual_network_name": "hvsoc0101-siempfnfs-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.hvsoc_siempf",
            "azurerm_virtual_network.hvsoc0101-siempfnfs-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "hvsoc_siempf_subnet-redmine_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.19.0.0/24",
            "address_prefixes": [
              "172.19.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e3b6ef5f-4e73-4510-9f11-2e94e2e518c7/resourceGroups/duplicate_hvsoc_siempf/providers/Microsoft.Network/virtualNetworks/hvsoc0101-siempfnfs-vnet/subnets/subnet-redmine",
            "name": "subnet-redmine",
            "resource_group_name": "duplicate_hvsoc_siempf",
            "service_endpoints": [
              "Microsoft.KeyVault",
              "Microsoft.Storage"
            ],
            "virtual_network_name": "hvsoc0101-siempfnfs-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.hvsoc_siempf",
            "azurerm_virtual_network.hvsoc0101-siempfnfs-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "hvsoc_siempf_AzureBastion_Subnet_network_security_group_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e3b6ef5f-4e73-4510-9f11-2e94e2e518c7/resourceGroups/duplicate_hvsoc_siempf/providers/Microsoft.Network/virtualNetworks/hvsoc0101-siempfnfs-vnet/subnets/AzureBastionSubnet",
            "network_security_group_id": "/subscriptions/e3b6ef5f-4e73-4510-9f11-2e94e2e518c7/resourceGroups/duplicate_hvsoc_siempf/providers/Microsoft.Network/networkSecurityGroups/hvsoc0101-siempfnfs-vnet-bastion-nsg",
            "subnet_id": "/subscriptions/e3b6ef5f-4e73-4510-9f11-2e94e2e518c7/resourceGroups/duplicate_hvsoc_siempf/providers/Microsoft.Network/virtualNetworks/hvsoc0101-siempfnfs-vnet/subnets/AzureBastionSubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.hvsoc0101-siempfnfs-vnet-bastion-nsg",
            "azurerm_resource_group.hvsoc_siempf",
            "azurerm_subnet.hvsoc_siempf_AzureBastion_Subnet",
            "azurerm_virtual_network.hvsoc0101-siempfnfs-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "hvsoc_siempf_subnet-container-instances_Subnet_network_security_group_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e3b6ef5f-4e73-4510-9f11-2e94e2e518c7/resourceGroups/duplicate_hvsoc_siempf/providers/Microsoft.Network/virtualNetworks/hvsoc0101-siempfnfs-vnet/subnets/subnet-container-instances",
            "network_security_group_id": "/subscriptions/e3b6ef5f-4e73-4510-9f11-2e94e2e518c7/resourceGroups/duplicate_hvsoc_siempf/providers/Microsoft.Network/networkSecurityGroups/hvsoc0101-siempfnfs-vnet-nsg-indexer",
            "subnet_id": "/subscriptions/e3b6ef5f-4e73-4510-9f11-2e94e2e518c7/resourceGroups/duplicate_hvsoc_siempf/providers/Microsoft.Network/virtualNetworks/hvsoc0101-siempfnfs-vnet/subnets/subnet-container-instances"
          },
          "dependencies": [
            "azurerm_network_security_group.hvsoc0101-siempfnfs-vnet-nsg-indexer",
            "azurerm_resource_group.hvsoc_siempf",
            "azurerm_subnet.hvsoc_siempf_subnet-container-instances_Subnet",
            "azurerm_virtual_network.hvsoc0101-siempfnfs-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "hvsoc0101-siempfnfs-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.17.0.0/24",
              "172.18.0.0/24",
              "172.19.0.0/24",
              "172.20.0.0/24",
              "172.21.0.0/24"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "0a177a19-a056-4fe6-85f6-b92783eb8afc",
            "id": "/subscriptions/e3b6ef5f-4e73-4510-9f11-2e94e2e518c7/resourceGroups/duplicate_hvsoc_siempf/providers/Microsoft.Network/virtualNetworks/hvsoc0101-siempfnfs-vnet",
            "location": "japaneast",
            "name": "hvsoc0101-siempfnfs-vnet",
            "resource_group_name": "duplicate_hvsoc_siempf",
            "timeouts": {
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.hvsoc_siempf"
          ]
        }
      ]
    }
  ]
}